<resources>
    <string name="app_name">Agenda CoIP</string>
    <string name="splash_cp">Corporate IP</string>
    <string name="app_name_bold"><b>Unique Personal Agenda</b></string>
    <string name="status_last">Sync Summary </string>
    <string name="status_sync_notes">Click the "Sync" button to make a copy of your phone contacts to the network or update the latest changes</string>
    <string name="status_default_sync_date">Not yet synchronised</string>
    <string name="status_on">\n on</string>
    <string name="status_sent">Updates Sent: </string>
    <string name="status_received">Updates Received: </string>
    <string name="status_errors">Errors: </string>
    <string name="status">Status</string>
    <string name="status_notes">To query the data from the last synchronization, press "Sync Log"</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync_log">Sync Log</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_reset_sync_log">Reset Sync Log</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="status_starting">Starting</string>
    <string name="status_resuming">Resuming</string>
    <string name="status_suspending">Suspending</string>
    <string name="status_initializing">Initializing</string>
    <string name="status_suspended">Suspended</string>
    <string name="status_temp_problem">Temporary Problem</string>
    <string name="status_press_resume">Press Resume to Continue</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="status_check_settings">Check Settings</string>
    <string name="status_operation_failed">Operation Failed</string>
    <string name="status_operation_conflict">Operation Conflict</string>
    <string name="status_no_updates">No Updates</string>
    <string name="status_incomplete">Incomplete</string>
    <string name="status_aborted_by_user">Aborted By User</string>
    <string name="status_connection_error">Connection Error</string>
    <string name="status_credentials_error">Wrong username and/or password.  Try again or see Help for more info.</string>
    <string name="status_device_full">Device Full</string>
    <string name="status_sync_complete">Synchronization finished</string>
    <string name="status_receiving_updates">Receiving updates</string>
    <string name="status_checking_contacts">Checking Contacts</string>
    <string name="status_sending_updates">Sending Updates</string>
    <string name="status_loading_contacts">Loading Contacts</string>
    <string name="status_deleting_contact">Deleting Contact</string>
    <string name="accept"><B>Accept</B></string>
    <string name="decline">Decline</string>
    <string name="enter_account_details">Enter your Account details:</string>
    <string name="empty_credentials_error">Please make sure username and password are not empty</string>
    <string name="empty_server_name_and_port_error">Please make sure server host name is not empty.</string>
    <string name="port_number_should_be_a_decimal_number">Please make sure port number is a decimal number.</string>
    <string name="registered_account">You need to have a registered sync account to use this app.</string>
    <string name="agree_terms_and_conditions">By using this service you are agreeing to the APU terms and conditions.  To review them please select Terms in the menu.</string>
    <string name="check_credentials_text">We\'re about to check your username and password and backup your contacts.  We\'ll also restore any contacts you already have on APU to your phone.\n\nClick Continue to start, or Cancel to do it later</string>
    <string name="post_sync_msg_text">This is the Post Sync configurable message text</string>
    <string name="pre_sync_msg_text">Are you sure you want to sync?</string>
    <string name="suspend">Suspend</string>
    <string name="resume">Resume</string>
    <string name="sync">Sync</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="cont">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="abort">Abort</string>
    <string name="syncing">Syncing...</string>
    <string name="resuming">Resuming...</string>
    <string name="suspending">Suspending...</string>
    <string name="cancelling">Cancelling...</string>
    <string name="reset">Reset</string>
    <string name="heading_placeholder"></string>
    <string name="details_placeholder"></string>
    <string name="syncing_contacts">Syncing</string>
    <string name="sync_in_progress">Sync in progress:</string>
    <string name="sis_received">Online Sync request received.  Click here to Sync.</string>
    <string name="cis_received">Contacts have changed on the device.  Click here to Sync</string>
    <string name="cis_no_password">Click here to enter your credentials to sync</string>
    <string name="last_sync">Last Sync</string>
    <string name="contacts">Contacts</string>
    <string name="phone">Phone</string>
    <string name="server">Server</string>
    <string name="added">Added</string>
    <string name="edited">Edited</string>
    <string name="deleted">Deleted</string>
    <string name="error">In Error</string>
    <string name="conflict">In Conflict</string>
    <string name="default_count">0</string>
    <string name="to_date">To Date</string>
    <string name="times_start">You have synced</string>
    <string name="times_end">time(s) since last reset</string>
    <string name="sync_log_header">Sync Log</string>
    <string name="last_sync_counters"></string>
    <string name="total_sync_counters_header">Total To Date</string>
    <string name="total_sync_counters"></string>
    <string name="last_sync_phone_errors_header">Phone Errors</string>
    <string name="last_sync_phone_errors"></string>
    <string name="last_sync_server_errors_header">Server Errors</string>
    <string name="last_sync_server_errors"></string>
    <string name="gen_settings">General Settings</string>
    <string name="sync_options">Sync Options</string>
    <string name="contact_options">Contact Options</string>
    <string name="acc_details">Account Details</string>
    <string name="acc_details_summary">Set account username and password</string>
    <string name="acc_username">Username</string>
    <string name="acc_password">Password</string>
    <string name="acc_rem_password">Remember Password</string>
    <string name="acc_server_hostname">Server Hostname</string>
    <string name="acc_server_port">Server Port</string>
    <string name="acc_use_ssl">Connect using SSL</string>
    <string name="auto_sync">Automatic Sync</string>
    <string name="auto_sync_summary">Set automatic sync settings</string>
    <string name="auto_sync_settings">Automatic Sync Settings</string>
    <string name="auto_sync_online">Online Sync Requests</string>
    <string name="auto_sync_online_summary">Enable Online Sync Requests</string>
    <string name="auto_sync_changes">Auto Sync Changes</string>
    <string name="auto_sync_changes_summary">Enable auto sync when contact changes are detected</string>
    <string name="auto_sync_detect">Detect Changes</string>
    <string name="auto_sync_detect_summary">Minimum number of contacts to sync</string>
    <string name="auto_sync_period">Sync periodically</string>
    <string name="auto_sync_period_days">Time interval for automatic sync:</string>
    <string name="auto_sync_period_days_summary">Days:</string>
    <string name="auto_sync_period_time">Start time (HH:MM):</string>
    <string name="auto_sync_period_time_note">Please set the sync time</string>
    <string name="sync_mode">Home Network Mode</string>
    <string name="sync_mode_summary">Select how to sync when on your home network</string>
    <string-array name="sync_mode_options">
       <item>Automatic</item>
       <item>Remind me</item>
       <item>Never Sync</item>
    </string-array>
    <string-array name="sync_mode_options_values">
       <item>2</item>
       <item>1</item>
       <item>0</item>
    </string-array>
    <string name="roam_mode">Roaming mode</string>
    <string name="roam_mode_summary">Set how to sync when roaming</string>
    <string name="wifi_mode">Wifi Mode</string>
    <string name="wifi_mode_summary">Set how to sync when using Wifi</string>
    <string name="conflict_res">Conflict Resolution</string>
    <string name="conflict_res_summary">Select how to resolve sync conflicts</string>
    <string-array name="conflict_res_options">
        <item>Phone overwrites server</item>
        <item>Server overwrites phone</item>
        <item>Create duplicates</item>
        <item>Ignore conflicts</item>
    </string-array>
        <string-array name="conflict_res_options_values">
        <item>4</item>
        <item>2</item>
        <item>8</item>
        <item>16</item>
    </string-array>
    <string name="copyright">© 2012 Critical Path.\n\n http://www.cp.net</string>
    <string name="version">Version</string>
    <string name="build">, build</string>
    <string name="progess_title">Sync in progress:</string>
    <string name="sync_summary">Sync Summary</string>
    <string name="sync_date">Not yet synchronised</string>
    <string name="server_alert">Server initiated sync...</string>
    <string name="downloading_resources">Downloading Resources...</string>
    <string name="download_complete">Download Complete</string>
    <string name="loading_resources">Loading Resources from Assets</string>
    <string name="error_downloading">Error downloading resource</string>
    <string name="error_locating">Error locating deployment SMS</string>
    <string name="contacts_changed"> contacts changed on device. Syncing...</string>
    <string name="minimum_error">Error: Minimum number of contacts to sync must be more than 1 and less than 100</string>
    <string name="minimum_days_error">Error: Minimum number of days for sync interval must be 1 or more</string>
    <string name="days_range_error">Error: days for sync interval should be more than 1 and less than 365</string>
    <string name="login_server_hostname_hint">server:port</string>
    <string name="slow_sync_alert">It will transfer all your phone book contacts to the server. This may take a few minutes. You can leave the application in the background by pressing the "Home" of your phone</string>
    <string name="config_app_helpfile">file:///android_asset/default/help/en/Contacts_Help/index.html</string>
    <string name="maxmun_days_error">Error: Maximum number of days for sync interval must be less than 365</string>
    <string name="config_app_termsandcondition">file:///android_asset/TermsAndConditions.html</string>
</resources>